--- a/apps/privacy-panel/index.html
+++ b/apps/privacy-panel/index.html
@@ -22,7 +22,7 @@
 
     <!-- Localization -->
     <link rel="manifest" href="manifest.webapp">
-    <link rel="localization" href="locales/countries.{locale}.properties">
+    <link rel="localization" href="locales/regions.{locale}.properties">
     <link rel="localization" href="locales/privacypanel.{locale}.properties">
 
     <!-- Templates: Location Accuracy -->
