--- a/apps/privacy-panel/index.html
+++ b/apps/privacy-panel/index.html
@@ -22,6 +22,7 @@
 
     <!-- Localization -->
     <link rel="manifest" href="manifest.webapp">
+    <link rel="localization" href="shared/locales/branding/branding.{locale}.properties">
     <link rel="localization" href="locales/regions.{locale}.properties">
     <link rel="localization" href="locales/privacypanel.{locale}.properties">
 
@@ -81,7 +82,7 @@
         </li>
         <li>
           <a id="menu-item-rpp" class="menu-item pp-link" data-icon="messages" href="#rpp-main">
-            <span data-l10n-id="remote-privacy-protection">Remote Privacy Protection</span>
+            <span data-l10n-id="remote-privacy-protection">Remote Protection</span>
           </a>
         </li>
         <li>
