--- a/apps/privacy-panel/index.html
+++ b/apps/privacy-panel/index.html
@@ -72,22 +72,22 @@
         <menu type="toolbar">
           <a class="pp-link" href="#about"><span class="icon gaia-icon-about">about</span></a>
         </menu>
-        <h1 data-l10n-id="privacy-panel">Privacy Panel</h1>
+        <h1 data-l10n-id="privacy-panel"></h1>
       </header>
       <ul>
         <li>
           <a id="menu-item-ala" class="menu-item pp-link" data-icon="location" href="#ala-main">
-            <span data-l10n-id="location-accuracy">Location Accuracy</span>
+            <span data-l10n-id="location-accuracy"></span>
           </a>
         </li>
         <li>
           <a id="menu-item-rpp" class="menu-item pp-link" data-icon="messages" href="#rpp-main">
-            <span data-l10n-id="remote-privacy-protection">Remote Protection</span>
+            <span data-l10n-id="remote-privacy-protection"></span>
           </a>
         </li>
         <li>
           <a id="menu-item-gt" class="menu-item pp-link" data-icon="flag" href="#gt-main">
-            <span data-l10n-id="guided-tour">Guided Tour</span>
+            <span data-l10n-id="guided-tour"></span>
           </a>
         </li>
       </ul>
