--- a/apps/privacy-panel/index.html
+++ b/apps/privacy-panel/index.html
@@ -82,7 +82,7 @@
         </li>
         <li>
           <a id="menu-item-rp" class="menu-item pp-link" data-icon="messages" href="#rp-main">
-            <span data-l10n-id="remote-privacy-protection"></span>
+            <span data-l10n-id="privacy-protection"></span>
           </a>
         </li>
         <li>
