--- a/apps/privacy-panel/index.html
+++ b/apps/privacy-panel/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="shared/style/input_areas.css">
     <link rel="stylesheet" type="text/css" href="shared/elements/gaia-icons/gaia-icons.css">
     <link rel="stylesheet" type="text/css" href="shared/elements/gaia-theme/gaia-theme.css">
+    <script src="shared/elements/gaia-header/dist/gaia-header.js"></script>
 
     <!-- Styles for Privacy Panel -->
     <link rel="stylesheet" type="text/css" href="style/lists.css">
