fix the localization

--- a/apps/privacy-panel/index.html
+++ b/apps/privacy-panel/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" type="text/css" href="style/panels.css">
 
     <!-- Localization -->
+    <meta name="defaultLanguage" content="en-US">
     <link rel="manifest" href="manifest.webapp">
     <link rel="localization" href="shared/locales/branding/branding.{locale}.properties">
     <link rel="localization" href="locales/regions.{locale}.properties">
