--- a/apps/privacy-panel/index.html
+++ b/apps/privacy-panel/index.html
@@ -23,7 +23,8 @@
 
     <!-- Localization -->
     <meta name="defaultLanguage" content="en-US">
-    <link rel="manifest" href="manifest.webapp">
+    <meta name="availableLanguages" content="ar, en-US, fr, zh-TW">
+
     <link rel="localization" href="shared/locales/branding/branding.{locale}.properties">
     <link rel="localization" href="locales/regions.{locale}.properties">
     <link rel="localization" href="locales/privacypanel.{locale}.properties">
